Fix sticky hover states on iOS back-navigation

--- a/src/components/GameLink/game-link.module.css
+++ b/src/components/GameLink/game-link.module.css
@@ -36,9 +36,15 @@
   padding: 5px;
 }
 
-.gameLink:hover .overlay,
+.gameLink:active .overlay,
 .overlay.missingImage {
   display: flex;
+}
+
+@media (hover: hover) {
+  .gameLink:hover .overlay {
+    display: flex;
+  }
 }
 
 .text {
