--- a/src/components/Page/base.css
+++ b/src/components/Page/base.css
@@ -57,8 +57,14 @@ h3 {
 a {
   text-decoration: none;
 
-  &:hover {
+  &:active {
     text-decoration: underline;
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
