--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -31,10 +31,16 @@
     color: var(--greenBackground);
   }
 
-  &:focus,
-  &:hover {
+  &:focus {
     border-color: var(--greenBodyText);
     outline: none;
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      border-color: var(--greenBodyText);
+      outline: none;
+    }
   }
 
   &:focus {
