--- a/src/components/Video/video.module.css
+++ b/src/components/Video/video.module.css
@@ -56,9 +56,16 @@
     fill-opacity 0.1s cubic-bezier(0.4, 0, 1, 1);
 }
 
-.playButton:hover .playIconOuter {
+.playButton:active .playIconOuter {
   fill: red;
   fill-opacity: 1;
+}
+
+@media (hover: hover) {
+  .playButton:hover .playIconOuter {
+    fill: red;
+    fill-opacity: 1;
+  }
 }
 
 .playIconInner {
